logs/offboard_pkg/build.make.084.log.stderr
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:2:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:70:61: error: expected ‘;’ at end of member declaration
   70 |     void get_att(double &yaw_d, geometry_msgs::Quaternion &q)
      |                                                             ^
      |                                                              ;
make[2]: *** [CMakeFiles/main.dir/build.make:63: CMakeFiles/main.dir/src/main.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:70:61: error: expected ‘;’ at end of member declaration
   70 |     void get_att(double &yaw_d, geometry_msgs::Quaternion &q)
      |                                                             ^
      |                                                              ;
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘void TaskManager::get_att(double&, geometry_msgs::Quaternion&)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:57:22: error: no matching function for call to ‘tf::Matrix3x3::Matrix3x3(geometry_msgs::Quaternion&)’
   57 |     tf::Matrix3x3 m(q);
      |                      ^
In file included from /opt/ros/noetic/include/tf/LinearMath/Transform.h:21,
                 from /opt/ros/noetic/include/tf/transform_datatypes.h:41,
                 from /opt/ros/noetic/include/tf/time_cache.h:38,
                 from /opt/ros/noetic/include/tf/tf.h:44,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:12,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/opt/ros/noetic/include/tf/LinearMath/Matrix3x3.h:63:22: note: candidate: ‘tf::Matrix3x3::Matrix3x3(const tf::Matrix3x3&)’
   63 |  TFSIMD_FORCE_INLINE Matrix3x3 (const Matrix3x3& other)
      |                      ^~~~~~~~~
/opt/ros/noetic/include/tf/LinearMath/Matrix3x3.h:63:50: note:   no known conversion for argument 1 from ‘geometry_msgs::Quaternion’ {aka ‘geometry_msgs::Quaternion_<std::allocator<void> >’} to ‘const tf::Matrix3x3&’
   63 |  TFSIMD_FORCE_INLINE Matrix3x3 (const Matrix3x3& other)
      |                                 ~~~~~~~~~~~~~~~~~^~~~~
/opt/ros/noetic/include/tf/LinearMath/Matrix3x3.h:54:2: note: candidate: ‘tf::Matrix3x3::Matrix3x3(const tfScalar&, const tfScalar&, const tfScalar&, const tfScalar&, const tfScalar&, const tfScalar&, const tfScalar&, const tfScalar&, const tfScalar&)’
   54 |  Matrix3x3(const tfScalar& xx, const tfScalar& xy, const tfScalar& xz,
      |  ^~~~~~~~~
/opt/ros/noetic/include/tf/LinearMath/Matrix3x3.h:54:2: note:   candidate expects 9 arguments, 1 provided
/opt/ros/noetic/include/tf/LinearMath/Matrix3x3.h:45:11: note: candidate: ‘tf::Matrix3x3::Matrix3x3(const tf::Quaternion&)’
   45 |  explicit Matrix3x3(const Quaternion& q) { setRotation(q); }
      |           ^~~~~~~~~
/opt/ros/noetic/include/tf/LinearMath/Matrix3x3.h:45:39: note:   no known conversion for argument 1 from ‘geometry_msgs::Quaternion’ {aka ‘geometry_msgs::Quaternion_<std::allocator<void> >’} to ‘const tf::Quaternion&’
   45 |  explicit Matrix3x3(const Quaternion& q) { setRotation(q); }
      |                     ~~~~~~~~~~~~~~~~~~^
/opt/ros/noetic/include/tf/LinearMath/Matrix3x3.h:40:2: note: candidate: ‘tf::Matrix3x3::Matrix3x3()’
   40 |  Matrix3x3 () {}
      |  ^~~~~~~~~
/opt/ros/noetic/include/tf/LinearMath/Matrix3x3.h:40:2: note:   candidate expects 0 arguments, 1 provided
make[2]: *** [CMakeFiles/main.dir/build.make:76: CMakeFiles/main.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:723: CMakeFiles/main.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
